--- a/index.html
+++ b/index.html
@@ -62,50 +62,124 @@
 	<select name="localesSelect" id="localesSelect">
 		<option value="auto">use default</option>
 
-		<!-- Africa -->
-		<option value="af-ZA">af-ZA (Afrikaans - South Africa)</option>
-		<option value="ar-DZ">ar-DZ (Arabic - Algeria)</option>
-		<option value="sw-KE">sw-KE (Swahili - Kenya)</option>
-		
-		<!-- Asia -->
-		<option value="ar-SA">ar-SA (Arabic - Saudi Arabia)</option>
-		<option value="ja-JP">ja-JP (Japanese - Japan)</option>
-		<option value="ko-KR">ko-KR (Korean - South Korea)</option>
-		<option value="zh-CN">zh-CN (Chinese - China)</option>
-		<option value="zh-TW">zh-TW (Chinese - Taiwan)</option>
-		<option value="hi-IN">hi-IN (Hindi - India)</option>
-		<option value="th-TH">th-TH (Thai - Thailand)</option>
-		
-		<!-- Europe -->
-		<option value="de-DE">de-DE (German - Germany)</option>
-		<option value="nl-NL">nl-NL (Dutch - Netherlands)</option>
-		<option value="en-GB">en-GB (English - United Kingdom)</option>
-		<option value="en-IE">en-IE (English - Ireland)</option>
-		<option value="es-ES">es-ES (Spanish - Spain)</option>
-		<option value="fr-FR">fr-FR (French - France)</option>
-		<option value="it-IT">it-IT (Italian - Italy)</option>
-		<option value="pt-PT">pt-PT (Portuguese - Portugal)</option>
-		<option value="ru-RU">ru-RU (Russian - Russia)</option>
-		
-		<!-- North America -->
-		<option value="en-US">en-US (English - United States)</option>
-		<option value="en-CA">en-CA (English - Canada)</option>
-		<option value="fr-CA">fr-CA (French - Canada)</option>
-		<option value="es-MX">es-MX (Spanish - Mexico)</option>
-		
-		<!-- South America -->
-		<option value="pt-BR">pt-BR (Portuguese - Brazil)</option>
-		<option value="es-AR">es-AR (Spanish - Argentina)</option>
-		<option value="es-CL">es-CL (Spanish - Chile)</option>
-		
-		<!-- Oceania -->
-		<option value="en-AU">en-AU (English - Australia)</option>
-		<option value="en-NZ">en-NZ (English - New Zealand)</option>
-		
-		<!-- Other -->
-		<option value="he-IL">he-IL (Hebrew - Israel)</option>
-		<option value="tr-TR">tr-TR (Turkish - Turkey)</option>
-		<option value="vi-VN">vi-VN (Vietnamese - Vietnam)</option>
+		<!-- 
+		To reproduce, run:
+		curl "https://github.com/chromium/chromium/raw/refs/heads/main/third_party/google-closure-library/closure/goog/i18n/datetimesymbols.js" -L | \
+		grep -Po "(?<=\* Date/time formatting symbols for locale )[\w_]+" | \
+		awk '{ print "<option value=\""$0"\">"$0"</option>" }'
+		-->
+		<option value="en_ISO">en_ISO</option>
+		<option value="af">af</option>
+		<option value="am">am</option>
+		<option value="ar">ar</option>
+		<option value="ar_DZ">ar_DZ</option>
+		<option value="ar_EG">ar_EG</option>
+		<option value="az">az</option>
+		<option value="be">be</option>
+		<option value="bg">bg</option>
+		<option value="bn">bn</option>
+		<option value="br">br</option>
+		<option value="bs">bs</option>
+		<option value="ca">ca</option>
+		<option value="chr">chr</option>
+		<option value="cs">cs</option>
+		<option value="cy">cy</option>
+		<option value="da">da</option>
+		<option value="de">de</option>
+		<option value="de_AT">de_AT</option>
+		<option value="de_CH">de_CH</option>
+		<option value="el">el</option>
+		<option value="en">en</option>
+		<option value="en_AU">en_AU</option>
+		<option value="en_CA">en_CA</option>
+		<option value="en_GB">en_GB</option>
+		<option value="en_IE">en_IE</option>
+		<option value="en_IN">en_IN</option>
+		<option value="en_SG">en_SG</option>
+		<option value="en_US">en_US</option>
+		<option value="en_ZA">en_ZA</option>
+		<option value="es">es</option>
+		<option value="es_419">es_419</option>
+		<option value="es_ES">es_ES</option>
+		<option value="es_MX">es_MX</option>
+		<option value="es_US">es_US</option>
+		<option value="et">et</option>
+		<option value="eu">eu</option>
+		<option value="fa">fa</option>
+		<option value="fi">fi</option>
+		<option value="fil">fil</option>
+		<option value="fr">fr</option>
+		<option value="fr_CA">fr_CA</option>
+		<option value="ga">ga</option>
+		<option value="gl">gl</option>
+		<option value="gsw">gsw</option>
+		<option value="gu">gu</option>
+		<option value="haw">haw</option>
+		<option value="he">he</option>
+		<option value="hi">hi</option>
+		<option value="hr">hr</option>
+		<option value="hu">hu</option>
+		<option value="hy">hy</option>
+		<option value="id">id</option>
+		<option value="in">in</option>
+		<option value="is">is</option>
+		<option value="it">it</option>
+		<option value="iw">iw</option>
+		<option value="ja">ja</option>
+		<option value="ka">ka</option>
+		<option value="kk">kk</option>
+		<option value="km">km</option>
+		<option value="kn">kn</option>
+		<option value="ko">ko</option>
+		<option value="ky">ky</option>
+		<option value="ln">ln</option>
+		<option value="lo">lo</option>
+		<option value="lt">lt</option>
+		<option value="lv">lv</option>
+		<option value="mk">mk</option>
+		<option value="ml">ml</option>
+		<option value="mn">mn</option>
+		<option value="mo">mo</option>
+		<option value="mr">mr</option>
+		<option value="ms">ms</option>
+		<option value="mt">mt</option>
+		<option value="my">my</option>
+		<option value="nb">nb</option>
+		<option value="ne">ne</option>
+		<option value="nl">nl</option>
+		<option value="no">no</option>
+		<option value="no_NO">no_NO</option>
+		<option value="or">or</option>
+		<option value="pa">pa</option>
+		<option value="pl">pl</option>
+		<option value="pt">pt</option>
+		<option value="pt_BR">pt_BR</option>
+		<option value="pt_PT">pt_PT</option>
+		<option value="ro">ro</option>
+		<option value="ru">ru</option>
+		<option value="sh">sh</option>
+		<option value="si">si</option>
+		<option value="sk">sk</option>
+		<option value="sl">sl</option>
+		<option value="sq">sq</option>
+		<option value="sr">sr</option>
+		<option value="sr_Latn">sr_Latn</option>
+		<option value="sv">sv</option>
+		<option value="sw">sw</option>
+		<option value="ta">ta</option>
+		<option value="te">te</option>
+		<option value="th">th</option>
+		<option value="tl">tl</option>
+		<option value="tr">tr</option>
+		<option value="uk">uk</option>
+		<option value="ur">ur</option>
+		<option value="uz">uz</option>
+		<option value="vi">vi</option>
+		<option value="zh">zh</option>
+		<option value="zh_CN">zh_CN</option>
+		<option value="zh_HK">zh_HK</option>
+		<option value="zh_TW">zh_TW</option>
+		<option value="zu">zu</option>
 	</select>
 	<span id="resolvedLocaleContainer" style="display: none;">
 		, resolved locale: <span id="resolvedLocaleBlock"></span>
