--- a/index.html
+++ b/index.html
@@ -59,127 +59,386 @@
 </div>
 <div class="locale-select-block">
 	<label for="localesSelect">Select locale:</label>
+	<!-- 
+	To reproduce, run:
+	curl "https://raw.githubusercontent.com/chromium/chromium/refs/heads/main/third_party/google-closure-library/closure/goog/i18n/localefeature.js" -L | \
+	grep -Po "(?<=goog.LOCALE === ')[^']+" | awk '{ print "<option value=\""$0"\">"$0"</option>" }'
+	-->
 	<select name="localesSelect" id="localesSelect">
 		<option value="auto">use default</option>
 
-		<!-- 
-		To reproduce, run:
-		curl "https://github.com/chromium/chromium/raw/refs/heads/main/third_party/google-closure-library/closure/goog/i18n/datetimesymbols.js" -L | \
-		grep -Po "(?<=\* Date/time formatting symbols for locale )[\w_]+" | \
-		sed s/_/-/ | awk '{ print "<option value=\""$0"\">"$0"</option>" }'
-		-->
-		<!-- <option value="en-ISO">en-ISO</option> -->
-		<option value="af">af</option>
 		<option value="am">am</option>
 		<option value="ar">ar</option>
+		<option value="ar-001">ar-001</option>
+		<option value="ar-AE">ar-AE</option>
+		<option value="ar-BH">ar-BH</option>
+		<option value="ar-DJ">ar-DJ</option>
 		<option value="ar-DZ">ar-DZ</option>
 		<option value="ar-EG">ar-EG</option>
-		<option value="az">az</option>
-		<option value="be">be</option>
+		<option value="ar-EH">ar-EH</option>
+		<option value="ar-ER">ar-ER</option>
+		<option value="ar-IL">ar-IL</option>
+		<option value="ar-IQ">ar-IQ</option>
+		<option value="ar-JO">ar-JO</option>
+		<option value="ar-KM">ar-KM</option>
+		<option value="ar-KW">ar-KW</option>
+		<option value="ar-LB">ar-LB</option>
+		<option value="ar-LY">ar-LY</option>
+		<option value="ar-MA">ar-MA</option>
+		<option value="ar-MR">ar-MR</option>
+		<option value="ar-OM">ar-OM</option>
+		<option value="ar-PS">ar-PS</option>
+		<option value="ar-QA">ar-QA</option>
+		<option value="ar-SA">ar-SA</option>
+		<option value="ar-SD">ar-SD</option>
+		<option value="ar-SO">ar-SO</option>
+		<option value="ar-SS">ar-SS</option>
+		<option value="ar-SY">ar-SY</option>
+		<option value="ar-TD">ar-TD</option>
+		<option value="ar-TN">ar-TN</option>
+		<option value="ar-YE">ar-YE</option>
 		<option value="bg">bg</option>
+		<option value="bg-BG">bg-BG</option>
 		<option value="bn">bn</option>
-		<option value="br">br</option>
-		<option value="bs">bs</option>
+		<option value="bn-BD">bn-BD</option>
+		<option value="bn-IN">bn-IN</option>
+		<option value="bs-Cyrl">bs-Cyrl</option>
+		<option value="bs-Cyrl-BA">bs-Cyrl-BA</option>
 		<option value="ca">ca</option>
-		<option value="chr">chr</option>
+		<option value="ca-AD">ca-AD</option>
+		<option value="ca-ES">ca-ES</option>
+		<option value="ca-FR">ca-FR</option>
+		<option value="ca-IT">ca-IT</option>
 		<option value="cs">cs</option>
-		<option value="cy">cy</option>
+		<option value="cs-CZ">cs-CZ</option>
 		<option value="da">da</option>
+		<option value="da-DK">da-DK</option>
+		<option value="da-GL">da-GL</option>
 		<option value="de">de</option>
 		<option value="de-AT">de-AT</option>
+		<option value="de-BE">de-BE</option>
 		<option value="de-CH">de-CH</option>
+		<option value="de-DE">de-DE</option>
+		<option value="de-IT">de-IT</option>
+		<option value="de-LI">de-LI</option>
+		<option value="de-LU">de-LU</option>
 		<option value="el">el</option>
+		<option value="el-CY">el-CY</option>
+		<option value="el-GR">el-GR</option>
 		<option value="en">en</option>
+		<option value="en-001">en-001</option>
+		<option value="en-150">en-150</option>
+		<option value="en-AE">en-AE</option>
+		<option value="en-AG">en-AG</option>
+		<option value="en-AI">en-AI</option>
+		<option value="en-AS">en-AS</option>
+		<option value="en-AT">en-AT</option>
 		<option value="en-AU">en-AU</option>
+		<option value="en-BB">en-BB</option>
+		<option value="en-BE">en-BE</option>
+		<option value="en-BI">en-BI</option>
+		<option value="en-BM">en-BM</option>
+		<option value="en-BS">en-BS</option>
+		<option value="en-BW">en-BW</option>
+		<option value="en-BZ">en-BZ</option>
 		<option value="en-CA">en-CA</option>
+		<option value="en-CC">en-CC</option>
+		<option value="en-CH">en-CH</option>
+		<option value="en-CK">en-CK</option>
+		<option value="en-CM">en-CM</option>
+		<option value="en-CX">en-CX</option>
+		<option value="en-CY">en-CY</option>
+		<option value="en-DE">en-DE</option>
+		<option value="en-DG">en-DG</option>
+		<option value="en-DK">en-DK</option>
+		<option value="en-DM">en-DM</option>
+		<option value="en-ER">en-ER</option>
+		<option value="en-FI">en-FI</option>
+		<option value="en-FJ">en-FJ</option>
+		<option value="en-FK">en-FK</option>
+		<option value="en-FM">en-FM</option>
 		<option value="en-GB">en-GB</option>
+		<option value="en-GD">en-GD</option>
+		<option value="en-GG">en-GG</option>
+		<option value="en-GH">en-GH</option>
+		<option value="en-GI">en-GI</option>
+		<option value="en-GM">en-GM</option>
+		<option value="en-GU">en-GU</option>
+		<option value="en-GY">en-GY</option>
+		<option value="en-HK">en-HK</option>
 		<option value="en-IE">en-IE</option>
+		<option value="en-IL">en-IL</option>
+		<option value="en-IM">en-IM</option>
 		<option value="en-IN">en-IN</option>
+		<option value="en-IO">en-IO</option>
+		<option value="en-JE">en-JE</option>
+		<option value="en-JM">en-JM</option>
+		<option value="en-KE">en-KE</option>
+		<option value="en-KI">en-KI</option>
+		<option value="en-KN">en-KN</option>
+		<option value="en-KY">en-KY</option>
+		<option value="en-LC">en-LC</option>
+		<option value="en-LR">en-LR</option>
+		<option value="en-LS">en-LS</option>
+		<option value="en-MG">en-MG</option>
+		<option value="en-MH">en-MH</option>
+		<option value="en-MO">en-MO</option>
+		<option value="en-MP">en-MP</option>
+		<option value="en-MS">en-MS</option>
+		<option value="en-MT">en-MT</option>
+		<option value="en-MU">en-MU</option>
+		<option value="en-MW">en-MW</option>
+		<option value="en-MY">en-MY</option>
+		<option value="en-NA">en-NA</option>
+		<option value="en-NF">en-NF</option>
+		<option value="en-NG">en-NG</option>
+		<option value="en-NL">en-NL</option>
+		<option value="en-NR">en-NR</option>
+		<option value="en-NU">en-NU</option>
+		<option value="en-NZ">en-NZ</option>
+		<option value="en-PG">en-PG</option>
+		<option value="en-PH">en-PH</option>
+		<option value="en-PK">en-PK</option>
+		<option value="en-PN">en-PN</option>
+		<option value="en-PR">en-PR</option>
+		<option value="en-PW">en-PW</option>
+		<option value="en-RW">en-RW</option>
+		<option value="en-SB">en-SB</option>
+		<option value="en-SC">en-SC</option>
+		<option value="en-SD">en-SD</option>
+		<option value="en-SE">en-SE</option>
 		<option value="en-SG">en-SG</option>
+		<option value="en-SH">en-SH</option>
+		<option value="en-SI">en-SI</option>
+		<option value="en-SL">en-SL</option>
+		<option value="en-SS">en-SS</option>
+		<option value="en-SX">en-SX</option>
+		<option value="en-SZ">en-SZ</option>
+		<option value="en-TC">en-TC</option>
+		<option value="en-TK">en-TK</option>
+		<option value="en-TO">en-TO</option>
+		<option value="en-TT">en-TT</option>
+		<option value="en-TV">en-TV</option>
+		<option value="en-TZ">en-TZ</option>
+		<option value="en-UG">en-UG</option>
+		<option value="en-UM">en-UM</option>
 		<option value="en-US">en-US</option>
+		<option value="en-VC">en-VC</option>
+		<option value="en-VG">en-VG</option>
+		<option value="en-VI">en-VI</option>
+		<option value="en-VU">en-VU</option>
+		<option value="en-WS">en-WS</option>
 		<option value="en-ZA">en-ZA</option>
+		<option value="en-ZM">en-ZM</option>
+		<option value="en-ZW">en-ZW</option>
 		<option value="es">es</option>
 		<option value="es-419">es-419</option>
+		<option value="es-AR">es-AR</option>
+		<option value="es-BO">es-BO</option>
+		<option value="es-BR">es-BR</option>
+		<option value="es-BZ">es-BZ</option>
+		<option value="es-CL">es-CL</option>
+		<option value="es-CO">es-CO</option>
+		<option value="es-CR">es-CR</option>
+		<option value="es-CU">es-CU</option>
+		<option value="es-DO">es-DO</option>
+		<option value="es-EA">es-EA</option>
+		<option value="es-EC">es-EC</option>
 		<option value="es-ES">es-ES</option>
+		<option value="es-GQ">es-GQ</option>
+		<option value="es-GT">es-GT</option>
+		<option value="es-HN">es-HN</option>
+		<option value="es-IC">es-IC</option>
 		<option value="es-MX">es-MX</option>
+		<option value="es-NI">es-NI</option>
+		<option value="es-PA">es-PA</option>
+		<option value="es-PE">es-PE</option>
+		<option value="es-PH">es-PH</option>
+		<option value="es-PR">es-PR</option>
+		<option value="es-PY">es-PY</option>
+		<option value="es-SV">es-SV</option>
 		<option value="es-US">es-US</option>
+		<option value="es-UY">es-UY</option>
+		<option value="es-VE">es-VE</option>
 		<option value="et">et</option>
-		<option value="eu">eu</option>
+		<option value="et-EE">et-EE</option>
 		<option value="fa">fa</option>
+		<option value="fa-AF">fa-AF</option>
+		<option value="fa-IR">fa-IR</option>
 		<option value="fi">fi</option>
+		<option value="fi-FI">fi-FI</option>
 		<option value="fil">fil</option>
+		<option value="fil-PH">fil-PH</option>
 		<option value="fr">fr</option>
+		<option value="fr-BE">fr-BE</option>
+		<option value="fr-BF">fr-BF</option>
+		<option value="fr-BI">fr-BI</option>
+		<option value="fr-BJ">fr-BJ</option>
+		<option value="fr-BL">fr-BL</option>
 		<option value="fr-CA">fr-CA</option>
-		<option value="ga">ga</option>
-		<option value="gl">gl</option>
-		<option value="gsw">gsw</option>
+		<option value="fr-CD">fr-CD</option>
+		<option value="fr-CF">fr-CF</option>
+		<option value="fr-CG">fr-CG</option>
+		<option value="fr-CH">fr-CH</option>
+		<option value="fr-CI">fr-CI</option>
+		<option value="fr-CM">fr-CM</option>
+		<option value="fr-DJ">fr-DJ</option>
+		<option value="fr-DZ">fr-DZ</option>
+		<option value="fr-FR">fr-FR</option>
+		<option value="fr-GA">fr-GA</option>
+		<option value="fr-GF">fr-GF</option>
+		<option value="fr-GN">fr-GN</option>
+		<option value="fr-GP">fr-GP</option>
+		<option value="fr-GQ">fr-GQ</option>
+		<option value="fr-HT">fr-HT</option>
+		<option value="fr-KM">fr-KM</option>
+		<option value="fr-LU">fr-LU</option>
+		<option value="fr-MA">fr-MA</option>
+		<option value="fr-MC">fr-MC</option>
+		<option value="fr-MF">fr-MF</option>
+		<option value="fr-MG">fr-MG</option>
+		<option value="fr-ML">fr-ML</option>
+		<option value="fr-MQ">fr-MQ</option>
+		<option value="fr-MR">fr-MR</option>
+		<option value="fr-MU">fr-MU</option>
+		<option value="fr-NC">fr-NC</option>
+		<option value="fr-NE">fr-NE</option>
+		<option value="fr-PF">fr-PF</option>
+		<option value="fr-PM">fr-PM</option>
+		<option value="fr-RE">fr-RE</option>
+		<option value="fr-RW">fr-RW</option>
+		<option value="fr-SC">fr-SC</option>
+		<option value="fr-SN">fr-SN</option>
+		<option value="fr-SY">fr-SY</option>
+		<option value="fr-TD">fr-TD</option>
+		<option value="fr-TG">fr-TG</option>
+		<option value="fr-TN">fr-TN</option>
+		<option value="fr-VU">fr-VU</option>
+		<option value="fr-WF">fr-WF</option>
+		<option value="fr-YT">fr-YT</option>
 		<option value="gu">gu</option>
-		<option value="haw">haw</option>
+		<option value="gu-IN">gu-IN</option>
 		<option value="he">he</option>
+		<option value="he-IL">he-IL</option>
 		<option value="hi">hi</option>
+		<option value="hi-IN">hi-IN</option>
 		<option value="hr">hr</option>
+		<option value="hr-BA">hr-BA</option>
+		<option value="hr-HR">hr-HR</option>
 		<option value="hu">hu</option>
-		<option value="hy">hy</option>
+		<option value="hu-HU">hu-HU</option>
 		<option value="id">id</option>
-		<option value="in">in</option>
-		<option value="is">is</option>
+		<option value="id-ID">id-ID</option>
 		<option value="it">it</option>
-		<option value="iw">iw</option>
+		<option value="it-CH">it-CH</option>
+		<option value="it-IT">it-IT</option>
+		<option value="it-SM">it-SM</option>
+		<option value="it-VA">it-VA</option>
 		<option value="ja">ja</option>
-		<option value="ka">ka</option>
-		<option value="kk">kk</option>
-		<option value="km">km</option>
+		<option value="ja-JP">ja-JP</option>
 		<option value="kn">kn</option>
+		<option value="kn-IN">kn-IN</option>
 		<option value="ko">ko</option>
-		<option value="ky">ky</option>
-		<option value="ln">ln</option>
-		<option value="lo">lo</option>
+		<option value="ko-KP">ko-KP</option>
+		<option value="ko-KR">ko-KR</option>
 		<option value="lt">lt</option>
+		<option value="lt-LT">lt-LT</option>
 		<option value="lv">lv</option>
-		<option value="mk">mk</option>
+		<option value="lv-LV">lv-LV</option>
 		<option value="ml">ml</option>
-		<option value="mn">mn</option>
-		<option value="mo">mo</option>
+		<option value="ml-IN">ml-IN</option>
 		<option value="mr">mr</option>
+		<option value="mr-IN">mr-IN</option>
 		<option value="ms">ms</option>
-		<option value="mt">mt</option>
-		<option value="my">my</option>
+		<option value="ms-BN">ms-BN</option>
+		<option value="ms-ID">ms-ID</option>
+		<option value="ms-MY">ms-MY</option>
+		<option value="ms-SG">ms-SG</option>
 		<option value="nb">nb</option>
-		<option value="ne">ne</option>
 		<option value="nl">nl</option>
+		<option value="nl-AW">nl-AW</option>
+		<option value="nl-BE">nl-BE</option>
+		<option value="nl-BQ">nl-BQ</option>
+		<option value="nl-CW">nl-CW</option>
+		<option value="nl-NL">nl-NL</option>
+		<option value="nl-SR">nl-SR</option>
+		<option value="nl-SX">nl-SX</option>
 		<option value="no">no</option>
-		<option value="no-NO">no-NO</option>
-		<option value="or">or</option>
-		<option value="pa">pa</option>
 		<option value="pl">pl</option>
+		<option value="pl-PL">pl-PL</option>
 		<option value="pt">pt</option>
+		<option value="pt-AO">pt-AO</option>
 		<option value="pt-BR">pt-BR</option>
+		<option value="pt-CH">pt-CH</option>
+		<option value="pt-CV">pt-CV</option>
+		<option value="pt-GQ">pt-GQ</option>
+		<option value="pt-GW">pt-GW</option>
+		<option value="pt-LU">pt-LU</option>
+		<option value="pt-MO">pt-MO</option>
+		<option value="pt-MZ">pt-MZ</option>
 		<option value="pt-PT">pt-PT</option>
+		<option value="pt-ST">pt-ST</option>
+		<option value="pt-TL">pt-TL</option>
 		<option value="ro">ro</option>
+		<option value="ro-MD">ro-MD</option>
+		<option value="ro-RO">ro-RO</option>
 		<option value="ru">ru</option>
-		<option value="sh">sh</option>
-		<option value="si">si</option>
+		<option value="ru-BY">ru-BY</option>
+		<option value="ru-KG">ru-KG</option>
+		<option value="ru-KZ">ru-KZ</option>
+		<option value="ru-MD">ru-MD</option>
+		<option value="ru-RU">ru-RU</option>
+		<option value="ru-UA">ru-UA</option>
 		<option value="sk">sk</option>
+		<option value="sk-SK">sk-SK</option>
 		<option value="sl">sl</option>
-		<option value="sq">sq</option>
+		<option value="sl-SI">sl-SI</option>
 		<option value="sr">sr</option>
+		<option value="sr-Cyrl">sr-Cyrl</option>
+		<option value="sr-Cyrl-BA">sr-Cyrl-BA</option>
+		<option value="sr-Cyrl-ME">sr-Cyrl-ME</option>
+		<option value="sr-Cyrl-RS">sr-Cyrl-RS</option>
+		<option value="sr-Cyrl-XK">sr-Cyrl-XK</option>
 		<option value="sr-Latn">sr-Latn</option>
+		<option value="sr-Latn-BA">sr-Latn-BA</option>
+		<option value="sr-Latn-ME">sr-Latn-ME</option>
+		<option value="sr-Latn-RS">sr-Latn-RS</option>
+		<option value="sr-Latn-XK">sr-Latn-XK</option>
 		<option value="sv">sv</option>
+		<option value="sv-AX">sv-AX</option>
+		<option value="sv-FI">sv-FI</option>
+		<option value="sv-SE">sv-SE</option>
 		<option value="sw">sw</option>
+		<option value="sw-CD">sw-CD</option>
+		<option value="sw-KE">sw-KE</option>
+		<option value="sw-TZ">sw-TZ</option>
+		<option value="sw-UG">sw-UG</option>
 		<option value="ta">ta</option>
+		<option value="ta-IN">ta-IN</option>
+		<option value="ta-LK">ta-LK</option>
+		<option value="ta-MY">ta-MY</option>
+		<option value="ta-SG">ta-SG</option>
 		<option value="te">te</option>
+		<option value="te-IN">te-IN</option>
 		<option value="th">th</option>
-		<option value="tl">tl</option>
+		<option value="th-TH">th-TH</option>
 		<option value="tr">tr</option>
+		<option value="tr-CY">tr-CY</option>
+		<option value="tr-TR">tr-TR</option>
 		<option value="uk">uk</option>
-		<option value="ur">ur</option>
-		<option value="uz">uz</option>
+		<option value="uk-UA">uk-UA</option>
 		<option value="vi">vi</option>
+		<option value="vi-VN">vi-VN</option>
 		<option value="zh">zh</option>
-		<option value="zh-CN">zh-CN</option>
-		<option value="zh-HK">zh-HK</option>
-		<option value="zh-TW">zh-TW</option>
-		<option value="zu">zu</option>
+		<option value="zh-Hans">zh-Hans</option>
+		<option value="zh-Hans-CN">zh-Hans-CN</option>
+		<option value="zh-Hans-HK">zh-Hans-HK</option>
+		<option value="zh-Hans-MO">zh-Hans-MO</option>
+		<option value="zh-Hans-SG">zh-Hans-SG</option>
+		<option value="zh-Hant">zh-Hant</option>
+		<option value="zh-Hant-HK">zh-Hant-HK</option>
+		<option value="zh-Hant-MO">zh-Hant-MO</option>
+		<option value="zh-Hant-TW">zh-Hant-TW</option>
 
 	</select>
 	<span id="resolvedLocaleContainer" style="display: none;">
