--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	To reproduce, run:
 	curl "https://github.com/chromium/chromium/raw/refs/heads/main/third_party/google-closure-library/closure/goog/i18n/datetimesymbolsext.js" -L | \
 	grep -Po "(?<=\* Date/time formatting symbols for locale )[\w_]+" | \
-	sed s/_/-/ | awk '{ print "\t\t<option value=\""$0"\">"$0"</option>" }'
+	sed s/_/-/g | awk '{ print "\t\t<option value=\""$0"\">"$0"</option>" }'
 	-->
 	<select name="localesSelect" id="localesSelect">
 		<option value="auto">use default</option>
@@ -109,9 +109,9 @@
 		<option value="ast">ast</option>
 		<option value="ast-ES">ast-ES</option>
 		<option value="az-Cyrl">az-Cyrl</option>
-		<option value="az-Cyrl_AZ">az-Cyrl_AZ</option>
+		<option value="az-Cyrl-AZ">az-Cyrl-AZ</option>
 		<option value="az-Latn">az-Latn</option>
-		<option value="az-Latn_AZ">az-Latn_AZ</option>
+		<option value="az-Latn-AZ">az-Latn-AZ</option>
 		<option value="bas">bas</option>
 		<option value="bas-CM">bas-CM</option>
 		<option value="be-BY">be-BY</option>
@@ -135,9 +135,9 @@
 		<option value="brx">brx</option>
 		<option value="brx-IN">brx-IN</option>
 		<option value="bs-Cyrl">bs-Cyrl</option>
-		<option value="bs-Cyrl_BA">bs-Cyrl_BA</option>
+		<option value="bs-Cyrl-BA">bs-Cyrl-BA</option>
 		<option value="bs-Latn">bs-Latn</option>
-		<option value="bs-Latn_BA">bs-Latn_BA</option>
+		<option value="bs-Latn-BA">bs-Latn-BA</option>
 		<option value="ca-AD">ca-AD</option>
 		<option value="ca-ES">ca-ES</option>
 		<option value="ca-FR">ca-FR</option>
@@ -154,8 +154,8 @@
 		<option value="chr-US">chr-US</option>
 		<option value="ckb">ckb</option>
 		<option value="ckb-Arab">ckb-Arab</option>
-		<option value="ckb-Arab_IQ">ckb-Arab_IQ</option>
-		<option value="ckb-Arab_IR">ckb-Arab_IR</option>
+		<option value="ckb-Arab-IQ">ckb-Arab-IQ</option>
+		<option value="ckb-Arab-IR">ckb-Arab-IR</option>
 		<option value="ckb-IQ">ckb-IQ</option>
 		<option value="ckb-IR">ckb-IR</option>
 		<option value="cs-CZ">cs-CZ</option>
@@ -281,7 +281,7 @@
 		<option value="en-TZ">en-TZ</option>
 		<option value="en-UG">en-UG</option>
 		<option value="en-UM">en-UM</option>
-		<option value="en-US_POSIX">en-US_POSIX</option>
+		<option value="en-US-POSIX">en-US-POSIX</option>
 		<option value="en-VC">en-VC</option>
 		<option value="en-VG">en-VG</option>
 		<option value="en-VI">en-VI</option>
@@ -324,31 +324,31 @@
 		<option value="fa-IR">fa-IR</option>
 		<option value="ff">ff</option>
 		<option value="ff-Adlm">ff-Adlm</option>
-		<option value="ff-Adlm_BF">ff-Adlm_BF</option>
-		<option value="ff-Adlm_CM">ff-Adlm_CM</option>
-		<option value="ff-Adlm_GH">ff-Adlm_GH</option>
-		<option value="ff-Adlm_GM">ff-Adlm_GM</option>
-		<option value="ff-Adlm_GN">ff-Adlm_GN</option>
-		<option value="ff-Adlm_GW">ff-Adlm_GW</option>
-		<option value="ff-Adlm_LR">ff-Adlm_LR</option>
-		<option value="ff-Adlm_MR">ff-Adlm_MR</option>
-		<option value="ff-Adlm_NE">ff-Adlm_NE</option>
-		<option value="ff-Adlm_NG">ff-Adlm_NG</option>
-		<option value="ff-Adlm_SL">ff-Adlm_SL</option>
-		<option value="ff-Adlm_SN">ff-Adlm_SN</option>
+		<option value="ff-Adlm-BF">ff-Adlm-BF</option>
+		<option value="ff-Adlm-CM">ff-Adlm-CM</option>
+		<option value="ff-Adlm-GH">ff-Adlm-GH</option>
+		<option value="ff-Adlm-GM">ff-Adlm-GM</option>
+		<option value="ff-Adlm-GN">ff-Adlm-GN</option>
+		<option value="ff-Adlm-GW">ff-Adlm-GW</option>
+		<option value="ff-Adlm-LR">ff-Adlm-LR</option>
+		<option value="ff-Adlm-MR">ff-Adlm-MR</option>
+		<option value="ff-Adlm-NE">ff-Adlm-NE</option>
+		<option value="ff-Adlm-NG">ff-Adlm-NG</option>
+		<option value="ff-Adlm-SL">ff-Adlm-SL</option>
+		<option value="ff-Adlm-SN">ff-Adlm-SN</option>
 		<option value="ff-Latn">ff-Latn</option>
-		<option value="ff-Latn_BF">ff-Latn_BF</option>
-		<option value="ff-Latn_CM">ff-Latn_CM</option>
-		<option value="ff-Latn_GH">ff-Latn_GH</option>
-		<option value="ff-Latn_GM">ff-Latn_GM</option>
-		<option value="ff-Latn_GN">ff-Latn_GN</option>
-		<option value="ff-Latn_GW">ff-Latn_GW</option>
-		<option value="ff-Latn_LR">ff-Latn_LR</option>
-		<option value="ff-Latn_MR">ff-Latn_MR</option>
-		<option value="ff-Latn_NE">ff-Latn_NE</option>
-		<option value="ff-Latn_NG">ff-Latn_NG</option>
-		<option value="ff-Latn_SL">ff-Latn_SL</option>
-		<option value="ff-Latn_SN">ff-Latn_SN</option>
+		<option value="ff-Latn-BF">ff-Latn-BF</option>
+		<option value="ff-Latn-CM">ff-Latn-CM</option>
+		<option value="ff-Latn-GH">ff-Latn-GH</option>
+		<option value="ff-Latn-GM">ff-Latn-GM</option>
+		<option value="ff-Latn-GN">ff-Latn-GN</option>
+		<option value="ff-Latn-GW">ff-Latn-GW</option>
+		<option value="ff-Latn-LR">ff-Latn-LR</option>
+		<option value="ff-Latn-MR">ff-Latn-MR</option>
+		<option value="ff-Latn-NE">ff-Latn-NE</option>
+		<option value="ff-Latn-NG">ff-Latn-NG</option>
+		<option value="ff-Latn-SL">ff-Latn-SL</option>
+		<option value="ff-Latn-SN">ff-Latn-SN</option>
 		<option value="fi-FI">fi-FI</option>
 		<option value="fil-PH">fil-PH</option>
 		<option value="fo">fo</option>
@@ -424,7 +424,7 @@
 		<option value="he-IL">he-IL</option>
 		<option value="hi-IN">hi-IN</option>
 		<option value="hi-Latn">hi-Latn</option>
-		<option value="hi-Latn_IN">hi-Latn_IN</option>
+		<option value="hi-Latn-IN">hi-Latn-IN</option>
 		<option value="hr-BA">hr-BA</option>
 		<option value="hr-HR">hr-HR</option>
 		<option value="hsb">hsb</option>
@@ -480,9 +480,9 @@
 		<option value="kok-IN">kok-IN</option>
 		<option value="ks">ks</option>
 		<option value="ks-Arab">ks-Arab</option>
-		<option value="ks-Arab_IN">ks-Arab_IN</option>
+		<option value="ks-Arab-IN">ks-Arab-IN</option>
 		<option value="ks-Deva">ks-Deva</option>
-		<option value="ks-Deva_IN">ks-Deva_IN</option>
+		<option value="ks-Deva-IN">ks-Deva-IN</option>
 		<option value="ksb">ksb</option>
 		<option value="ksb-TZ">ksb-TZ</option>
 		<option value="ksf">ksf</option>
@@ -540,7 +540,7 @@
 		<option value="mn-MN">mn-MN</option>
 		<option value="mni">mni</option>
 		<option value="mni-Beng">mni-Beng</option>
-		<option value="mni-Beng_IN">mni-Beng_IN</option>
+		<option value="mni-Beng-IN">mni-Beng-IN</option>
 		<option value="mr-IN">mr-IN</option>
 		<option value="ms-BN">ms-BN</option>
 		<option value="ms-ID">ms-ID</option>
@@ -585,9 +585,9 @@
 		<option value="os-GE">os-GE</option>
 		<option value="os-RU">os-RU</option>
 		<option value="pa-Arab">pa-Arab</option>
-		<option value="pa-Arab_PK">pa-Arab_PK</option>
+		<option value="pa-Arab-PK">pa-Arab-PK</option>
 		<option value="pa-Guru">pa-Guru</option>
-		<option value="pa-Guru_IN">pa-Guru_IN</option>
+		<option value="pa-Guru-IN">pa-Guru-IN</option>
 		<option value="pcm">pcm</option>
 		<option value="pcm-NG">pcm-NG</option>
 		<option value="pl-PL">pl-PL</option>
@@ -636,16 +636,16 @@
 		<option value="saq-KE">saq-KE</option>
 		<option value="sat">sat</option>
 		<option value="sat-Olck">sat-Olck</option>
-		<option value="sat-Olck_IN">sat-Olck_IN</option>
+		<option value="sat-Olck-IN">sat-Olck-IN</option>
 		<option value="sbp">sbp</option>
 		<option value="sbp-TZ">sbp-TZ</option>
 		<option value="sc">sc</option>
 		<option value="sc-IT">sc-IT</option>
 		<option value="sd">sd</option>
 		<option value="sd-Arab">sd-Arab</option>
-		<option value="sd-Arab_PK">sd-Arab_PK</option>
+		<option value="sd-Arab-PK">sd-Arab-PK</option>
 		<option value="sd-Deva">sd-Deva</option>
-		<option value="sd-Deva_IN">sd-Deva_IN</option>
+		<option value="sd-Deva-IN">sd-Deva-IN</option>
 		<option value="se">se</option>
 		<option value="se-FI">se-FI</option>
 		<option value="se-NO">se-NO</option>
@@ -658,9 +658,9 @@
 		<option value="sg-CF">sg-CF</option>
 		<option value="shi">shi</option>
 		<option value="shi-Latn">shi-Latn</option>
-		<option value="shi-Latn_MA">shi-Latn_MA</option>
+		<option value="shi-Latn-MA">shi-Latn-MA</option>
 		<option value="shi-Tfng">shi-Tfng</option>
-		<option value="shi-Tfng_MA">shi-Tfng_MA</option>
+		<option value="shi-Tfng-MA">shi-Tfng-MA</option>
 		<option value="si-LK">si-LK</option>
 		<option value="sk-SK">sk-SK</option>
 		<option value="sl-SI">sl-SI</option>
@@ -677,17 +677,17 @@
 		<option value="sq-MK">sq-MK</option>
 		<option value="sq-XK">sq-XK</option>
 		<option value="sr-Cyrl">sr-Cyrl</option>
-		<option value="sr-Cyrl_BA">sr-Cyrl_BA</option>
-		<option value="sr-Cyrl_ME">sr-Cyrl_ME</option>
-		<option value="sr-Cyrl_RS">sr-Cyrl_RS</option>
-		<option value="sr-Cyrl_XK">sr-Cyrl_XK</option>
-		<option value="sr-Latn_BA">sr-Latn_BA</option>
-		<option value="sr-Latn_ME">sr-Latn_ME</option>
-		<option value="sr-Latn_RS">sr-Latn_RS</option>
-		<option value="sr-Latn_XK">sr-Latn_XK</option>
+		<option value="sr-Cyrl-BA">sr-Cyrl-BA</option>
+		<option value="sr-Cyrl-ME">sr-Cyrl-ME</option>
+		<option value="sr-Cyrl-RS">sr-Cyrl-RS</option>
+		<option value="sr-Cyrl-XK">sr-Cyrl-XK</option>
+		<option value="sr-Latn-BA">sr-Latn-BA</option>
+		<option value="sr-Latn-ME">sr-Latn-ME</option>
+		<option value="sr-Latn-RS">sr-Latn-RS</option>
+		<option value="sr-Latn-XK">sr-Latn-XK</option>
 		<option value="su">su</option>
 		<option value="su-Latn">su-Latn</option>
-		<option value="su-Latn_ID">su-Latn_ID</option>
+		<option value="su-Latn-ID">su-Latn-ID</option>
 		<option value="sv-AX">sv-AX</option>
 		<option value="sv-FI">sv-FI</option>
 		<option value="sv-SE">sv-SE</option>
@@ -727,16 +727,16 @@
 		<option value="ur-IN">ur-IN</option>
 		<option value="ur-PK">ur-PK</option>
 		<option value="uz-Arab">uz-Arab</option>
-		<option value="uz-Arab_AF">uz-Arab_AF</option>
+		<option value="uz-Arab-AF">uz-Arab-AF</option>
 		<option value="uz-Cyrl">uz-Cyrl</option>
-		<option value="uz-Cyrl_UZ">uz-Cyrl_UZ</option>
+		<option value="uz-Cyrl-UZ">uz-Cyrl-UZ</option>
 		<option value="uz-Latn">uz-Latn</option>
-		<option value="uz-Latn_UZ">uz-Latn_UZ</option>
+		<option value="uz-Latn-UZ">uz-Latn-UZ</option>
 		<option value="vai">vai</option>
 		<option value="vai-Latn">vai-Latn</option>
-		<option value="vai-Latn_LR">vai-Latn_LR</option>
+		<option value="vai-Latn-LR">vai-Latn-LR</option>
 		<option value="vai-Vaii">vai-Vaii</option>
-		<option value="vai-Vaii_LR">vai-Vaii_LR</option>
+		<option value="vai-Vaii-LR">vai-Vaii-LR</option>
 		<option value="vi-VN">vi-VN</option>
 		<option value="vun">vun</option>
 		<option value="vun-TZ">vun-TZ</option>
@@ -761,20 +761,20 @@
 		<option value="yrl-VE">yrl-VE</option>
 		<option value="yue">yue</option>
 		<option value="yue-Hans">yue-Hans</option>
-		<option value="yue-Hans_CN">yue-Hans_CN</option>
+		<option value="yue-Hans-CN">yue-Hans-CN</option>
 		<option value="yue-Hant">yue-Hant</option>
-		<option value="yue-Hant_HK">yue-Hant_HK</option>
+		<option value="yue-Hant-HK">yue-Hant-HK</option>
 		<option value="zgh">zgh</option>
 		<option value="zgh-MA">zgh-MA</option>
 		<option value="zh-Hans">zh-Hans</option>
-		<option value="zh-Hans_CN">zh-Hans_CN</option>
-		<option value="zh-Hans_HK">zh-Hans_HK</option>
-		<option value="zh-Hans_MO">zh-Hans_MO</option>
-		<option value="zh-Hans_SG">zh-Hans_SG</option>
+		<option value="zh-Hans-CN">zh-Hans-CN</option>
+		<option value="zh-Hans-HK">zh-Hans-HK</option>
+		<option value="zh-Hans-MO">zh-Hans-MO</option>
+		<option value="zh-Hans-SG">zh-Hans-SG</option>
 		<option value="zh-Hant">zh-Hant</option>
-		<option value="zh-Hant_HK">zh-Hant_HK</option>
-		<option value="zh-Hant_MO">zh-Hant_MO</option>
-		<option value="zh-Hant_TW">zh-Hant_TW</option>
+		<option value="zh-Hant-HK">zh-Hant-HK</option>
+		<option value="zh-Hant-MO">zh-Hant-MO</option>
+		<option value="zh-Hant-TW">zh-Hant-TW</option>
 		<option value="zu-ZA">zu-ZA</option>
 
 	</select>
